<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>LoginDialog</class>
 <widget class="QDialog" name="LoginDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>438</width>
    <height>409</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>LoginDialog</string>
  </property>
  <property name="styleSheet">
   <string notr="true"/>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_3">
   <property name="spacing">
    <number>0</number>
   </property>
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <widget class="QWidget" name="topWidget" native="true">
     <property name="maximumSize">
      <size>
       <width>16777215</width>
       <height>70</height>
      </size>
     </property>
     <property name="styleSheet">
      <string notr="true">QWidget{border:1px solid #92C8E8; margin: 0px;background-color:white} QPushButton{border:0px;margin:0px;}
QLabel{border:0px;margin:0px;}</string>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="iconLabel">
        <property name="text">
         <string/>
        </property>
        <property name="pixmap">
         <pixmap>:/images/upleft</pixmap>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="minBtn">
        <property name="maximumSize">
         <size>
          <width>20</width>
          <height>20</height>
         </size>
        </property>
        <property name="text">
         <string/>
        </property>
        <property name="icon">
         <iconset resource="../widget.qrc">
          <normaloff>:/resources/images/mininum</normaloff>:/resources/images/mininum</iconset>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="closeBtn">
        <property name="maximumSize">
         <size>
          <width>20</width>
          <height>20</height>
         </size>
        </property>
        <property name="text">
         <string/>
        </property>
        <property name="icon">
         <iconset resource="../widget.qrc">
          <normaloff>:/resources/images/close</normaloff>:/resources/images/close</iconset>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QWidget" name="bottomWidget" native="true">
     <property name="styleSheet">
      <string notr="true">border:1px solid #92C8E8; background-color:#D6EFFB;</string>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <layout class="QVBoxLayout" name="bottomLayout">
        <item>
         <widget class="QWidget" name="bottomCenterWidget" native="true">
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>250</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
            <width>290</width>
            <height>16777215</height>
           </size>
          </property>
          <property name="styleSheet">
           <string notr="true">QWidget{border:0px;}
QLabel{color:#3F3A39;font-size:16px;font-family:楷体;}
QLineEdit{border:1px solid #CBD2D5 ;height:32px;border-radius:6px;background:white;padding-left:5px;}
QPushButton{border:0px;background:#F3A026;color:white;border-radius:6px;font-size:16px}</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
            <layout class="QHBoxLayout" name="userLayout">
             <item>
              <widget class="QLabel" name="userLabel">
               <property name="maximumSize">
                <size>
                 <width>32</width>
                 <height>16777215</height>
                </size>
               </property>
               <property name="text">
                <string>账号</string>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QLineEdit" name="userLineEdit">
               <property name="maximumSize">
                <size>
                 <width>230</width>
                 <height>16777215</height>
                </size>
               </property>
              </widget>
             </item>
            </layout>
           </item>
           <item>
            <layout class="QHBoxLayout" name="pwdLayout">
             <item>
              <widget class="QLabel" name="passwdLabel">
               <property name="maximumSize">
                <size>
                 <width>32</width>
                 <height>16777215</height>
                </size>
               </property>
               <property name="text">
                <string>密码</string>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QLineEdit" name="passwdLineEdit">
               <property name="maximumSize">
                <size>
                 <width>230</width>
                 <height>16777215</height>
                </size>
               </property>
              </widget>
             </item>
            </layout>
           </item>
           <item>
            <layout class="QHBoxLayout" name="checkLayout">
             <item>
              <widget class="QCheckBox" name="checkBox">
               <property name="text">
                <string/>
               </property>
              </widget>
             </item>
             <item alignment="Qt::AlignRight">
              <widget class="QLabel" name="checkLabel">
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
                 <height>20</height>
                </size>
               </property>
               <property name="text">
                <string>保存用户信息</string>
               </property>
              </widget>
             </item>
            </layout>
           </item>
           <item>
            <layout class="QHBoxLayout" name="signInLayout">
             <item>
              <widget class="QPushButton" name="signInBtn">
               <property name="minimumSize">
                <size>
                 <width>230</width>
                 <height>38</height>
                </size>
               </property>
               <property name="text">
                <string>登录</string>
               </property>
              </widget>
             </item>
            </layout>
           </item>
           <item>
            <layout class="QHBoxLayout" name="restoreLayout">
             <item>
              <widget class="QPushButton" name="registerBtn">
               <property name="styleSheet">
                <string notr="true">QPushButton{border:0;background-color:transparent;color:#3F3A39;font-size:14px}
QPushButton:hover{color:#CBD2D5}</string>
               </property>
               <property name="text">
                <string>用户注册</string>
               </property>
              </widget>
             </item>
             <item alignment="Qt::AlignRight|Qt::AlignVCenter">
              <widget class="QLabel" name="VLabel">
               <property name="text">
                <string>|</string>
               </property>
              </widget>
             </item>
             <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
              <widget class="QPushButton" name="forgetBtn">
               <property name="styleSheet">
                <string notr="true">QPushButton{border:0;background-color:transparent;color:#3F3A39;font-size:14px}QPushButton:hover{color:#CBD2D5}</string>
               </property>
               <property name="text">
                <string>忘记密码？</string>
               </property>
              </widget>
             </item>
            </layout>
           </item>
          </layout>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="../widget.qrc"/>
 </resources>
 <connections/>
</ui>
